# mygeopy1

./: Htests.py  README.md  pyproject.toml  test_triangle.py
example_pyproject.egg-info/: PKG-INFO  SOURCES.txt
mygeopy/: triangle.py
tests/: test_triangle.py  triangle_test.py
